# WB-Repricer

./: .gitignore  README.md  build.py  create_exe.bat  main.py  pyproject.toml  requirements.txt  инструкция.txt
app/: config.py  constants.py  main.py  shops_info.py
app/events/: delete_products.py  update_prices.py  utils.py
app/excel_processor/: __init__.py  parse_table.py
app/interface/: colors.py  elements.py  images_base64.py  layouts.py
app/services/: __init__.py  exceptions.py  price_updater.py  product_manager.py
app/ui/: main_window.py  shops_block.py
app/wb_api/: __init__.py  products.py  products_prices.py  products_stocks.py  warehouses.py
