[project]
name = "wb-repricer-qt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250527",
    "pyinstaller>=6.13.0",
    "pyqt6>=6.9.0",
    "requests>=2.32.3",
    "types-openpyxl>=3.1.5.20250516",
    "types-requests>=2.32.0.20250515",
]
